<resources>
    <string name="app_name">Bashkirov_Kirill_Taxi</string>
    <string name="bashkirov_kirill">Bashkirov Kirill</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="rectangle_profile">TODO</string>
    <string name="string_novosibirsk">novosibirsk</string>
    <string name="novosibirsk1">Novosibirsk</string>
    <string name="string_rectangle_profile">rectangle_profile</string>
    <string name="i_accept_the_terms_of_the_agreement">I accept the terms of the agreement</string>
    <string name="sign_in">SIGN IN</string>
    <string name="have_an_account">Have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="string_remember_me">Remember me</string>
    <string name="image15">TODO</string>
    <string name="cars">TODO</string>
    <string name="menu">Menu</string>
    <string name="image_profile">image_profile</string>
    <string name="view1">TODO</string>
    <string name="image7">TODO</string>
    <string name="txt1">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="createanewaccount">Create a new account?</string>
    <string name="image2">TODO</string>
    <string name="image6">TODO</string>
    <string name="image8">TODO</string>
    <string name="image5">TODO</string>
    <string name="image4">TODO</string>
    <string name="image3">TODO</string>
    <string name="background">back</string>
    <string name="dark_background">dark_back</string>
    <string name="imageview1">TODO</string>
    <string name="icon_user">TODO</string>
    <string name="pismo">TODO</string>
    <string name="codlock">TODO</string>
    <string name="codlock1">TODO</string>
    <string name="imagiview">TODO</string>
    <string name="string_imagiview">imagiview</string>
    <string name="imagiview1e">TODO</string>
    <string name="string_imagiview1e">imagiview1e</string>
    <string name="imagiviewgood">TODO</string>
    <string name="string_imagiviewgood">imagiviewgood</string>
    <string name="string_string_imagiviewgood">imagiviewgood1</string>
    <string name="imagiviewtaxi">TODO</string>
    <string name="string_imagiviewtaxi">imagiviewtaxi1</string>
    <string name="your_e_mail_adress">your e-mail</string>
    <string name="string_your_e_mail_adress">your_email</string>
    <string name="string_string_your_e_mail_adress">e_mail_adress</string>
    <string name="settings_text">Settings</string>
    <string name="history_text">History</string>
    <string name="menu_text">Menu</string>
</resources>