<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_start_screen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/map1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_car"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="220dp"
            android:contentDescription="@string/cars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D9D9D9"
                android:contentDescription="@string/string_rectangle_profile"
                android:src="@drawable/rectangle7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/image_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:text="@string/bashkirov_kirill"
                android:textSize="15sp"
                android:textColor="#FF000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="30dp"
                android:text="@string/novosibirsk"
                android:textColor="#FF000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="290sp"
                android:inputType="textCapWords"
                android:text="@string/menu"
                android:textColor="#FF000000"
                android:textSize="13sp"
                app:cornerRadius="10dp"
                app:iconTint="#FFFFFFFF"
                tools:ignore="TextViewEdits,TextContrastCheck" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>